--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </li>
 
         <li>
-          <a href="#" target="_blank">Ver meu portifolio</a>
+          <a href="https://github.com/gabrielroldann" target="_blank">Ver meu portifolio</a>
         </li>
 
         <li>
@@ -38,7 +38,7 @@
       </ul>
 
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a href="https://github.com/gabrielroldann" target="_blank">
           <ion-icon class="icon" name="logo-github"></ion-icon>
         </a>
 
@@ -56,8 +56,8 @@
       </div>
 
       <footer>
-        Feito com ♥ pela
-        <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
+        Feito por Gabriel Roldan no Discover da 
+        <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>.
       </footer>
     </div>
 
